# ontv-mac

./: .gitignore  Podfile  README.md  Taskfile.yml  craptv.json  deploy.json  deploy.py  environment.yml  icon.icns  leagues.json  ontv.json  package-lock.json  package.json  pyproject.toml
craptv/: AppDelegate.swift  Info.plist  craptvApp.swift  header.m
craptv.xcodeproj/: project.pbxproj
craptv.xcworkspace/: contents.xcworkspacedata
craptv/api/: Api.swift  ApiResponse.swift  ApiUrl.swift
craptv/menu/: Menu.swift
craptv/models/: AbstractEntity.swift  Schema.swift
craptv/notification/: Notification.swift
craptv/player/: AbstractPlayer.swift  Player.swift
craptv/providers/: Providers.swift
craptv/utils/: Bool.swift  Date.swift  Size.swift  String.swift
craptv/views/: ContentView.swift  PreferencesView.swift  SearchView.swift  VideoView.swift
craptv/window/: MainWindow.swift
deploy/: __main__.py  deploy.json  deploy.py  models.py
ontv/: AppDelegate.swift  Defaults+Workaround.swift  Info.plist  ontv.entitlements  ontvApp.swift
ontv.xcodeproj/: project.pbxproj
ontv.xcworkspace/: contents.xcworkspacedata
ontv/api/: Api.swift  ApiResponse.swift  ApiUrl.swift
ontv/menu/: Menu.swift
ontv/models/: AbstractEntity.swift  Schema.swift
ontv/notification/: Notification.swift
ontv/player/: AbstractPlayer.swift  Player.swift  PlayerInterfaces.swift  ResourceLoader.swift
ontv/providers/: Generator.swift  Providers.swift
ontv/utils/: Bundle.swift  Date.swift  Double.swift  Fraction.swift  Int.swift  Int64.swift  Size.swift  String.swift
(+149 files in other folders)
